# macos-calendar-reminders-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/: __init__.py  __main__.py  config.py  server.py
src/eventkit/: __init__.py  converters.py  store.py
src/models/: __init__.py  event.py  reminder.py
src/services/: __init__.py  calendar_service.py  protocols.py  reminder_service.py  summary_service.py
tests/: conftest.py  test_calendar_service.py  test_reminder_service.py
